# yaraforge

./: .gitignore  ARCHITECTURE.md  CONTRIBUTING.md  README.md  pyproject.toml  requirements.txt
rules/malware/: generic_malware.yar
rules/ransomware/: ransomware_generic.yar
rules/webshells/: webshell_generic.yar
tests/: test_loader.py  test_scanner.py
yaraforge/cli/: main.py
yaraforge/deploy/: deployer.py
yaraforge/engine/: loader.py  scanner.py
yaraforge/report/: reporter.py
